<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/dashboard"
        android:icon="@drawable/dashboard_ic"
        android:title="@string/dashboard_title"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/note_dashboard"
        android:icon="@drawable/note_ic"
        android:title="@string/note_menu"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/spaces"
        android:icon="@drawable/log_ic"
        android:title="@string/spaces"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/configuration"
        android:icon="@drawable/config_ic"
        android:title="@string/configuration"
        app:showAsAction="ifRoom"/>

</menu>